# FilesystemWatcher

./: .gitignore  AbstractFilesystemWatcher.cpp  AbstractFilesystemWatcher.hpp  BaseFilesystemWatcher.hpp  CMakeLists.txt  LinuxFilesystemWatcher.cpp  LinuxFilesystemWatcher.hpp  ManualFilesystemWatcher.cpp  ManualFilesystemWatcher.hpp  README.md  main.cpp
examples/Logger/: CMakeLists.txt  main.cpp
include/: AbstractFilesystemWatcher.hpp  BaseFilesystemWatcher.hpp  LinuxFilesystemWatcher.hpp  ManualFilesystemWatcher.hpp
src/: AbstractFilesystemWatcher.cpp  BaseFilesystemWatcher.cpp  LinuxFilesystemWatcher.cpp  ManualFilesystemWatcher.cpp
tests/: CMakeLists.txt  Functions.hpp  filesystem.hpp  tests.cpp
